k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hearables-proxy
  labels:
    app.kubernetes.io/name: hearables-proxy
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hearables-proxy
  ports:
    - name: http
      port: 80
      targetPort: http
